feat: html and css of the finished form

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,6 @@
     "node_modules": true,
     ".gitignore": true,
     "index.css": true,
-    "webpack.config.js": false
+    "webpack.config.js": true
   }
 }
